# Django_How-to-write-reusable-Apps

./: README.md
django-app-polls/: setup.cfg
project/: Makefile
project/mysite/: asgi.py  settings.py  wsgi.py
